@@ -3,17 +3,24 @@ package com.ul88.be.service;
 import com.ul88.be.dto.ProblemDto;
 import com.ul88.be.dto.SolvedAcApiDto;
 import com.ul88.be.dto.SolvedAcDto;
+import com.ul88.be.dto.StudentDto;
+import com.ul88.be.entity.Management;
 import com.ul88.be.entity.Problem;
 import com.ul88.be.entity.ProblemLevel;
+import com.ul88.be.entity.Student;
 import com.ul88.be.exception.CustomException;
 import com.ul88.be.exception.ErrorCode;
+import com.ul88.be.repository.JdbcProblemRepository;
 import com.ul88.be.repository.ProblemRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.log4j.Log4j2;
 import org.springframework.http.HttpStatusCode;
+import org.springframework.http.client.SimpleClientHttpRequestFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestClient;
 
 import java.io.IOException;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -22,47 +29,43 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Log4j2
 public class ProblemService {
     final String prefixUrl = "https://solved.ac/api/v3/search/problem?query=s@";
     final String suffixUrl = "&page=";
 
     private final ProblemRepository problemRepository;
+    private final JdbcProblemRepository jdbcProblemRepository;
 
-    public void addProblem(Integer id) {
-        problemRepository.findById(id).ifPresent(i -> {
-            throw new CustomException(ErrorCode.PROBLEM_ALREADY_EXISTS);
-        });
-
-        problemRepository.save(checkEXISTSProblem(id));
+    public List<ProblemDto> getProblems(List<Integer> problemIds){
+        return problemIds.stream().map(id -> {
+            Optional<Problem> p = problemRepository.findById(id);
+            if(p.isPresent()){
+                return ProblemDto.fromEntity(p.get());
+            }
+            return addProblem(id);
+        }).toList();
     }
 
-    public void deleteProblem(Integer id) {
-        Problem entity = problemRepository.findById(id).orElseThrow(() ->
+    public List<StudentDto> getStudents(Integer id){
+        Problem problem = problemRepository.findById(id).orElseThrow(() ->
                 new CustomException(ErrorCode.PROBLEM_NOT_FOUND));
 
-        problemRepository.delete(entity);
-    }
-
-    public ProblemDto getProblem(Integer id){
-        Optional<Problem> entity = problemRepository.findById(id);
-        if(entity.isEmpty()){
-            addProblem(id);
-            return getProblem(id);
-        }
-
-        return ProblemDto.fromEntity(entity.get());
-    }
-
-    public List<ProblemDto> getStudents(){
-        return problemRepository.findAll().stream()
-                .map(ProblemDto::fromEntity)
-                .collect(Collectors.toList());
+        return problem.getManagementList().stream().map(management ->
+            StudentDto.fromEntity(management.getStudent())
+        ).toList();
     }
 
     public List<Problem> parsingSolvedAc(String bojId) throws IOException {
         String url = prefixUrl + bojId;
 
-        RestClient restClient = RestClient.create();
+        SimpleClientHttpRequestFactory requestFactory = new SimpleClientHttpRequestFactory();
+        requestFactory.setConnectTimeout(Duration.ofSeconds(5));
+        requestFactory.setReadTimeout(Duration.ofSeconds(5));
+
+        RestClient restClient = RestClient.builder()
+                .requestFactory(requestFactory).build();
+
         SolvedAcApiDto responseApiDataList = restClient.get().uri(url)
                 .header("x-solvedac-language", "ko")
                 .retrieve()
@@ -73,7 +76,7 @@ public class ProblemService {
 
         List<Problem> problemList = new ArrayList<>();
         for(SolvedAcDto dto : responseApiDataList.getItems()){
-            problemList.add(SolvedAcToProblem(dto));
+            problemList.add(dto.toProblem().toEntity());
         }
 
         for(int i=2;i<=pages;i++){
@@ -83,18 +86,25 @@ public class ProblemService {
                     .body(SolvedAcApiDto.class);
 
             for(SolvedAcDto dto : responseApiDataList.getItems()){
-                problemList.add(SolvedAcToProblem(dto));
+                Problem p = dto.toProblem().toEntity();
+                problemList.add(existsProblem(p));
             }
         }
 
-        problemRepository.saveAll(problemList);
+        jdbcProblemRepository.saveAll(problemList);
 
         return problemList;
     }
 
-    private Problem checkEXISTSProblem(Integer id){
-        RestClient restClient = RestClient.create();
-        String url = "https://solved.ac/api/v3/problem/show?problemId" + id;
+    private ProblemDto addProblem(Integer id){
+        SimpleClientHttpRequestFactory requestFactory = new SimpleClientHttpRequestFactory();
+        requestFactory.setConnectTimeout(Duration.ofSeconds(5));
+        requestFactory.setReadTimeout(Duration.ofSeconds(5));
+
+        RestClient restClient = RestClient.builder()
+                .requestFactory(requestFactory).build();
+
+        String url = "https://solved.ac/api/v3/problem/show?problemId=" + id;
         SolvedAcDto solvedAcDto = restClient.get().uri(url)
                 .header("x-solvedac-language", "ko")
                 .retrieve()
@@ -103,15 +113,12 @@ public class ProblemService {
                 }))
                 .body(SolvedAcDto.class);
 
-
-        return SolvedAcToProblem(solvedAcDto);
+        Problem p = solvedAcDto.toProblem().toEntity();
+        problemRepository.save(existsProblem(p));
+        return ProblemDto.fromEntity(p);
     }
 
-    private Problem SolvedAcToProblem(SolvedAcDto solved){
-        return Problem.builder()
-                .id(solved.getProblemId())
-                .name(solved.getTitleKo())
-                .level(ProblemLevel.fromNumber(solved.getLevel()))
-                .build();
+    private Problem existsProblem(Problem problem){
+        return problemRepository.findById(problem.getId()).orElse(problem);
     }
 }
